Add Html Version 2

--- a/index.html
+++ b/index.html
@@ -286,17 +286,22 @@
                             <div class="main-thumb">
                                 <img 
                                 class="pl-lg-5"
-
                                 src="./assets/images/feature/pro-main.png" alt="feature">
                             </div>
                             <div class="main-thumb">
-                                <img src="./assets/images/feature/pro-main.png" alt="feature">
+                                <img 
+                                class="pl-lg-5"
+                                src="./assets/images/feature/20.png" alt="feature">
                             </div>
                             <div class="main-thumb">
-                                <img src="./assets/images/feature/pro-main3.png" alt="feature">
+                                <img 
+                                class="pl-lg-5"
+                                src="./assets/images/feature/pro-main3.png" alt="feature">
                             </div>
                             <div class="main-thumb">
-                                <img src="./assets/images/feature/pro-main4.png" alt="feature">
+                                <img 
+                                class="pl-lg-5"
+                                src="./assets/images/feature/pro-main4.png" alt="feature">
                             </div>
                         </div>
                     </div>
@@ -407,7 +412,6 @@
                     </div>
                     <div class="how-thumb">
                         <img 
-                        width="500" height="500"
                         src="./assets/images/3d/1.png" alt="how">
                     </div>
                 </div>
@@ -427,7 +431,6 @@
                     </div>
                     <div class="how-thumb">
                         <img 
-                        width="500" height="500"
                         src="./assets/images/3d/3.png" alt="how">
                     </div>
                 </div>
@@ -448,7 +451,6 @@
                     </div>
                     <div class="how-thumb">
                         <img 
-                            width="500" height="500"
                         src="./assets/images/3d/5.png" alt="how">
                     </div>
                 </div>
@@ -513,13 +515,17 @@
                             <div class="main-thumb">
                                 <img 
                                 class="pl-lg-5"
-                                src="./assets/images/feature/pro-main.png" alt="feature">
+                                src="./assets/images/feature/16.png" alt="feature">
                             </div>
                             <div class="main-thumb">
-                                <img src="./assets/images/feature/pro-main3.png" alt="feature">
+                                <img 
+                                class="pl-lg-5"
+                                src="./assets/images/feature/8.png" alt="feature">
                             </div>
                             <div class="main-thumb">
-                                <img src="./assets/images/feature/pro-main4.png" alt="feature">
+                                <img 
+                                class="pl-lg-5"
+                                src="./assets/images/feature/9.png" alt="feature">
                             </div>
                         </div>
                     </div>
